# SDHCALSim

./: .gitignore  CMakeLists.txt  DeadTime.C  DeadTime.h  README  README.md  README_David  RayonTempsmort.C  SimuLyonTest.cc  analyseCs137Sim.cc  timeStudy.C  timeStudy.h  timeStudy_rootinstruction.txt  writeTree.C
.github/workflows/: Linux.yml  build.yml  macOS.yml
CMSplots/PlotsStyleForGRPC/: CMS_lumi.C  ggGraphMacro.C  ggMacro.C  myMacro.C  tdrstyle.C
apps/: CMakeLists.txt  SDHCALSim.cpp
exec/: SDHCALSim.cxx  SDHCALSimVis.cxx  SDHCALSimWithScintillator.cxx
include/: DHCalEventReader.hh  LyonDetectorConstruction.hh  LyonDetectorFieldMessenger.hh  LyonDetectorFieldSetup.hh  LyonGlobalMagneticField.hh  LyonPhysicsList.hh_removed  LyonPrimaryGeneratorAction.hh  LyonPrimaryGeneratorAction.hh~  LyonPrimaryGeneratorActionMessenger.hh  LyonPrimaryGeneratorActionMessenger.hh~  LyonRun.hh  LyonRun.hh~  LyonRunAction.hh  LyonRunActionMessenger.hh  LyonSensitiveDetector.hh  LyonStepLinkingAlgo.hh  LyonStepLinkingAlgo.hh~  LyonTrackHit.hh  MarlinUtil_NNClusters.h  MyRandom.h  SDHCALDetectorConstruction.h  SDHCALEventAction.h  SDHCALGun.h  SDHCALHit.h  SDHCALLcioWriter.h  SDHCALPrimaryGeneratorAction.h  SDHCALRPC.h  SDHCALRPCSensitiveDetector.h  SDHCALRPCWithScintillator.h  SDHCALRootWriter.h  SDHCALRunAction.h  SDHCALStackingAction.h  SDHCALSteppingAction.h  SDHCALTrackingAction.h  SDHCAL_Simu_EventAnalyser.h  SDHCAL_Util_CaloHitVector.h  SDHCAL_Util_CaloHitVector_template.h  VideauDetectorConstruction.hh
installtool/: init.sh  local.cmake
libs/: CMakeLists.txt
libs/include/: MyRandom.hpp  Pattern.hpp  PatternTypes.hpp  SDHCALActionInitialization.hpp  SDHCALCoordinates.hpp  SDHCALDetectorConstruction.hpp  SDHCALEventAction.h  SDHCALEventAction.hpp  SDHCALGun.h  SDHCALGun.hpp  SDHCALHit.h  SDHCALHit.hpp  SDHCALLcioWriter.hpp  SDHCALMaterials.hpp  SDHCALPrimaryGeneratorAction.h  SDHCALPrimaryGeneratorAction.hpp  SDHCALPrimaryGeneratorActionMessenger.h  SDHCALPrimaryGeneratorActionMessenger.hpp  SDHCALRPC.hpp  SDHCALRPCSensitiveDetector.hpp  SDHCALRootWriter.h  SDHCALRootWriter.hpp  SDHCALRun.hpp  SDHCALRunAction.hpp  SDHCALStackingAction.hpp  SDHCALSteppingAction.h  SDHCALSteppingAction.hpp  SDHCALTrackingAction.h  SDHCALTrackingAction.hpp
libs/src/: MyRandom.cpp  Pattern.cpp  PatternTypes.cpp  SDHCALActionInitialization.cpp  SDHCALCoordinates.cpp  SDHCALDetectorConstruction.cpp  SDHCALEventAction.cpp  SDHCALGun.cpp  SDHCALHit.cpp  SDHCALLcioWriter.cpp  SDHCALMaterials.cpp  SDHCALPrimaryGeneratorAction.cpp  SDHCALPrimaryGeneratorActionMessenger.cpp  SDHCALRPC.cpp  SDHCALRPCSensitiveDetector.cpp  SDHCALRootWriter.cpp  SDHCALRun.cpp  SDHCALRunAction.cpp  SDHCALStackingAction.cpp  SDHCALSteppingAction.cpp  SDHCALTrackingAction.cpp
mac/: Cs137.mac  run10.mac  testrun.mac  vis.mac
script/: SDHCALSim.py  Types.json  example.py  runLocal.py  validation.py
src/: #LyonPrimaryGeneratorAction.cc#  DHCalEventReader.cc  LyonDetectorConstruction.cc  LyonDetectorFieldMessenger.cc  LyonDetectorFieldSetup.cc  LyonGlobalMagneticField.cc  LyonPhysicsList.cc_removed  LyonPrimaryGeneratorAction.cc  LyonPrimaryGeneratorAction.cc~  LyonPrimaryGeneratorActionMessenger.cc  LyonRun.cc  LyonRun.cc~  LyonRunAction.cc  LyonRunActionMessenger.cc  LyonSensitiveDetector.cc  LyonStepLinkingAlgo.cc  LyonStepLinkingAlgo.cc~  LyonTrackHit.cc  SDHCALDetectorConstruction.cpp  SDHCALEventAction.cpp  SDHCALGun.cpp  SDHCALHit.cpp  SDHCALLcioWriter.cpp  SDHCALMaterials.cpp  SDHCALPrimaryGeneratorAction.cpp  SDHCALRPC.cpp  SDHCALRPCSensitiveDetector.cpp  SDHCALRPCWithScintillator.cpp  SDHCALRootWriter.cpp  SDHCALRun.cpp  SDHCALRunAction.cpp  SDHCALSimVis.cxx  SDHCALSteppingAction.cpp  SDHCALTrackingAction.cpp  SDHCAL_Simu_EventAnalyser.cc  VideauDetectorConstruction.cc
timeStudy/: timeStudy.C  timeStudy.h
